# Mini-C-Compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  ast.cpp  ast.hpp  input.c  lex  lex.yy.c  lexer.l  minic.l  minic.tab.c  minic.tab.h  minic.y  parser.ypp  y.tab.c
